--- a/myAppWeb/build.gradle
+++ b/myAppWeb/build.gradle
@@ -24,12 +24,15 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
+	implementation ("org.springframework.boot:spring-boot-starter-web")
+	implementation ("org.springframework.boot:spring-boot-starter-data-jpa")
+	implementation ("org.liquibase:liquibase-core")
+	runtimeOnly ("org.postgresql:postgresql")
+	compileOnly ("org.projectlombok:lombok")
+	annotationProcessor ("org.projectlombok:lombok")
 	implementation("org.apache.commons:commons-lang3")
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation ("org.springframework.boot:spring-boot-starter-test")
+	testRuntimeOnly ("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.named('test') {
