--- a/myAppWeb/build.gradle
+++ b/myAppWeb/build.gradle
@@ -26,7 +26,9 @@ repositories {
 dependencies {
 	implementation ("org.springframework.boot:spring-boot-starter-web")
 	implementation ("org.springframework.boot:spring-boot-starter-data-jpa")
-	implementation ("org.liquibase:liquibase-core")
+	// https://mvnrepository.com/artifact/org.flywaydb/flyway-core
+	implementation("org.flywaydb:flyway-core:10.21.0")
+
 	runtimeOnly ("org.postgresql:postgresql")
 	compileOnly ("org.projectlombok:lombok")
 	annotationProcessor ("org.projectlombok:lombok")
