--- a/myAppWeb/src/main/resources/application.yaml
+++ b/myAppWeb/src/main/resources/application.yaml
@@ -1,20 +1,20 @@
 server:
-  port: 8089
-
+  port: 8080
+  servlet:
+    context-path: /app
 spring:
-  application:
-    name: spring-app
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/myDB
-    username: postgres
-    password: 1234
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:appdb;MODE=PostgreSQL
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
 
-  jpa:
-    database: POSTGRESQL
-    show-sql: true
-    hibernate:
-      ddl-auto: create-drop
+#  flyway:
+#    url: jdbc:h2:mem:appdb;MODE=PostgreSQL
 
-  liquibase:
-    change-log: classpath:/liquibase/changelog-master.yml
+logging:
+  level:
+    org.springframework.jdbc.core.JdbcTemplate: TRACE
